--- a/portfolio-site-react/public/index.html
+++ b/portfolio-site-react/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Portfolio Site</title>
+    <title>Portfolio Site by Nobuya Saito</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a91150784b.js" crossorigin="anonymous"></script>
   </head>
